--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "concurrently": "^6.2.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^84.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.6",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12"
   }
 }
