--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^1.26.3",
     "concurrently": "^6.2.1",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "googleapis": "^84.0.0",
